<resources>
    <string name="app_name">Prisoner\'s Sandpit</string>
    <string name="action_settings">Settings</string>
    <string name="add_prisoner_name_label">Name:</string>
    <string name="add_prisoner_name_hint">My Prisoner</string>
    <string name="add_prisoner_default_alpha">0.1</string>
    <string name="add_prisoner_activity_default_gamma">0.9</string>
    <string name="add_prisoner_gamma_label">Gamma:</string>
    <string name="submit_button_text">Submit</string>
    <string name="failed_add_prisoner_msg">Failed to add Prisoner</string>
    <string name="title_activity_prisoner_home">PrisonerHomeActivity</string>
    <string name="title_test">Test</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prisoner_home_status_label">Status:</string>
    <string name="prisoner_home_performance_txt">Performance</string>
    <string name="invalid_alpha_msg"><![CDATA[Invalid alpha value. Alpha should be a decimal >= 0 and <= 1]]></string>
    <string name="invalid_name_msg">Invalid prisoner name</string>
    <string name="invalid_gamma_msg"><![CDATA[Invalid gamma value. Gamma should be a decimal >= 0 and <= 1]]></string>
    <string name="prisoner_home_navigation_train">Train</string>
    <string name="title_activity_trainer_settings">Trainer Settings</string>

    <string-array name="trainer_settings_episode_options">
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>10000</item>
        <item>100000</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="trainer_settings_select_trainer_heading">Select a Trainer</string>
    <string name="cooperative_trainer_radio_button_txt">Cooperative Trainer</string>
    <string name="betraying_trainer_radio_button_text">Betraying Trainer</string>
    <string name="tit_for_tat_trainer_radio_button_text">Tit for Tat Trainer</string>
    <string name="other_prisoner_agent_radio_button_text">Other Prisoner Agent...</string>
    <string name="trainer_settings_episodes_spinner_label">Episodes:</string>
    <string name="notify_me_at_the_end_of_the_training">Notify me at the end of the training</string>
    <string name="train_button_text">Train</string>
    <string name="trainer_settings_error_msg">Invalid trainer selected</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="select_a_prisoner_recycler_view_text">Select a Prisoner</string>
    <string name="other_prisoner_agent_radio_button_txt">Other Prisoner Agent: %s</string>
    <string name="vs_header_txt">vs</string>
    <string name="stay_result_action">COOP</string>
    <string name="betray_result_action">BETRAY</string>
    <string name="select_tester_dialog_title">Select Tester</string>
    <string name="testing_activity_score_heading_format">%s\'s Score</string>
    <string name="default_score">0</string>
    <string name="idle_status">Idle</string>
    <string name="channel_name">prisoner_sandpit_channel</string>
    <string name="channel_description">...</string>
    <string name="completed_training_notification_title">Training Completed</string>
    <string name="completed_training_notification_content">%s has finished training and is ready to be tested</string>
    <string name="learning_status">Learning</string>
    <string name="prisoner_home_default_status">...</string>
    <string name="add_prisoner_fab_tap_target_title">Welcome to Prisoner\'s Sandpit</string>
    <string name="add_prisoner_fab_tap_target_desc">Click here to create your first Prisoner Agent</string>
    <string name="prisoner_home_alpha_label">Alpha:</string>
    <string name="prisoner_home_default_value">..</string>
    <string name="prisoner_home_gamma_label">Gamma:</string>
    <string name="title_activity_vs">VsActivity</string>
    <string name="vs_action_title">Vs</string>
    <string name="vs_activity_header_format">Vs %s</string>
    <string name="vs_activity_round_label">Round</string>
    <string name="vs_activity_default_round">1</string>
    <string name="vs_activity_cooperate_btn">Cooperate</string>
    <string name="vs_activity_betray_btn">Betray</string>
    <string name="opponent_s_move_label">Opponent\'s Move</string>
    <string name="default_opponents_action_label">\???</string>
    <string name="your_score_label">Your Score</string>
    <string name="opponent_s_score_label">Opponent\'s Score</string>
    <string name="next_round_button_text">Next Round</string>
    <string name="add_a_prisoner_agent_heading">Add a Prisoner Agent</string>
</resources>
