<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/add_prisoner_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Large"
        android:text="Add a Prisoner Agent"
        android:textAlignment="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <TableLayout
        android:layout_below="@id/add_prisoner_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0"
        android:padding="20dp" >
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_prisoner_name_label"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />
            <EditText
                android:id="@+id/add_prisoner_activity_name_input"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_prisoner_name_hint"
                android:inputType="textPersonName"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/alpha_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/prisoner_home_alpha_label"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />
            <EditText
                android:id="@+id/add_prisoner_activity_alpha_input"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_prisoner_default_alpha"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/gamma_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_prisoner_gamma_label"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp" />
            <EditText
                android:id="@+id/add_prisoner_activity_gamma_input"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_prisoner_activity_default_gamma"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/add_prisoner_activity_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:text="@string/submit_button_text"
        android:theme="@style/AppTheme.Button"/>
    <ProgressBar
        android:id="@+id/add_prisoner_activity_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/add_prisoner_activity_submit_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_toLeftOf="@id/add_prisoner_activity_submit_button"
        android:visibility="invisible"/>
</RelativeLayout>